--- a/about/index.html
+++ b/about/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/stylesheets/socicon.css" media="">
     <link rel="stylesheet" href="/stylesheets/layout.css" media="">
     <link rel="stylesheet" href="/stylesheets/layout-blue.css" media="">
+    <link rel="stylesheet" href="/stylesheets/about.css" media="">
     <noscript>
         <iframe src="//www.googletagmanager.com/ns.html?id=GTM-W3WJC5" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
