--- a/projects/index.html
+++ b/projects/index.html
@@ -73,12 +73,12 @@
                 <!-- AUTHOR:Josh Stagg -->
                 <!-- DATE:2015 -->
                 <h1 id="current">Current</h1>
-                <p><a href="/projects/slate"><img src="/images/feature.png" alt=""></a></p>
+                <p><a href="/projects/slate"><img src="/images/slate/feature.png" alt=""></a></p>
                 <h2 id="-slate-watch-face-projects-slate-"><a href="/projects/slate">Slate: Watch Face</a></h2>
                 <p>Simple and clean analog watch face for Android Wear.</p>
                 <hr>
                 <h1 id="past">PAST</h1>
-                <p><a href="/projects/weather/"><img src="/images/atmospheric-feature.png" alt=""></a></p>
+                <p><a href="/projects/weather/"><img src="/images/atmospheric/atmospheric-feature.png" alt=""></a></p>
                 <h2 id="-atmospheric-projects-weather-"><a href="/projects/weather/">Atmospheric</a></h2>
                 <p>Atmospheric is an android weather app that combines local photography and informative weather data to provide an
                     accurate and changing view of your weather.</p>
