--- a/projects/slate/index.html
+++ b/projects/slate/index.html
@@ -100,7 +100,7 @@
                     </center>
                     <br>
                     <center>
-                        <a href="https://play.google.com/store/apps/details?id=ca.joshstagg.slate"><img src="Slate%20Watch%20Face_files/en_badge_web_generic.png" alt="Get it on Google Play" class="no-elevation" target="_blank" width="240px">
+                        <a href="https://play.google.com/store/apps/details?id=ca.joshstagg.slate"><img src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" alt="Get it on Google Play" class="no-elevation" target="_blank" width="240px">
                         </a>
                     </center>
                 </ul>
