--- a/projects/pspwvista/index.html
+++ b/projects/pspwvista/index.html
@@ -74,7 +74,7 @@
                 <!-- TITLE:pspWvista -->
                 <!-- AUTHOR:Josh Stagg -->
                 <!-- DATE:2009 -->
-                <iframe src="http://www.youtube.com/embed/bvLsyDhhMlQ?feature=oembed&amp;wmode=opaque&amp;enablejsapi=1" allowfullscreen="" width="100%" height="480" frameborder="0"></iframe>
+                <iframe width="100%" height="480" src="https://www.youtube.com/embed/Sn4Ut4x58zc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p><img src="/images/pspwvista-feature.jpg" alt=""></p>
                 <p>Like the&nbsp;<span>Playstation Portable,</span><span>&nbsp;</span><span>pspWvista is a no longer under development, it belongs to history as one of many </span><a href="http://blazebyte.org/">BlazeByte.org</a><span>&nbsp;"web
                         portals" that were created between 2005-2010. It was one of the top PSP
