--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/stylesheets/layout.css" media="">
     <link rel="stylesheet" href="/stylesheets/layout-light.css" media="">
     <link rel="stylesheet" href="/stylesheets/index.css" media="">
+    <link rel="me" href="https://mstdn.ca/@stagg">
     <noscript>
     	<iframe src="//www.googletagmanager.com/ns.html?id=GTM-W3WJC5" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
